--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <html>
-
-
-
-
-
-
-
-</html>
+  <head>
+    <link rel= "https://cdn.pixabay.com/photo/2012/04/23/17/29/k-39336_640.png">
+    <title> Kash's site </title>
+    </link>
+  </head>
+  <body>
+    <ul>
+      <li><a href = "https://www.mathplayground.com/"> Math Playground </a> </li>
+      <li><a href = ""> Kash's Projects </a> </li>
+       <li><a href = ""> Digital Design Projects </a> </li>
+       <li><a href = ""> Dataset Apps </a> </li>
+    </ul>
+    <br>
+    <center>
+    <h1> Welcome to AP CSP Fall 2023 </h1>
+    <p> Kash Prabhu's Code.org Projects </p>
+<img src="https://d1lss44hh2trtw.cloudfront.net/resize?type=webp&url=https%3A%2F%2Fshacknews-www.s3.amazonaws.com%2Fassets%2Farticle%2F2023%2F02%2F16%2Fgta-online-gets-new-multi-floor-eclipse-boulevard-garage-free-to-gta-members_feature.jpg&width=1032&sign=i0yd4IInrNej_76ZMox0YkDeoekoAD_5DGwOqbpflLM"></iframe>
+      <br>
+     </center>
+      </body>
+    </html>
