--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+   <link rel="stylesheet" href="style.css">
     <link rel= "https://cdn.pixabay.com/photo/2012/04/23/17/29/k-39336_640.png">
     <title> Kash's site </title>
     </link>
