--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <ul>
       <li><a href = "https://www.mathplayground.com/"> Math Playground </a> </li>
-      <li><a href = "kashsproject.html"> Kash's Projects </a> </li>
+      <li><a href = "kashsprojects.html"> Kash's Projects </a> </li>
        <li><a href = ""> Digital Design Projects </a> </li>
        <li><a href = ""> Dataset Apps </a> </li>
     </ul>
