--- a/kashsprojects.html
+++ b/kashsprojects.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="style3.css">
      <link rel="stylesheet" href="style2.css">
     <title> Kash's site </title>
   </head>
