--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
       <li><a href = "https://www.mathplayground.com/"> Math Playground </a> </li>
       <li><a href = "kashsprojects.html"> Kash's Projects </a> </li>
-       <li><a href = "kashsprojects.html"> Digital Design Projects </a> </li>
+       <li><a href = "designprojects.html"> Digital Design Projects </a> </li>
        <li><a href = ""> Dataset Apps </a> </li>
     </ul>
     <br>
