--- a/kashsprojects.html
+++ b/kashsprojects.html
@@ -5,7 +5,7 @@
   </head>
   <body>
       <ul>
-      <li><a href = ""> Home </a> </li>
+      <li><a href = "index.html"> Home </a> </li>
     <center>
     <h1> Projects </h1>
       </ul>
