--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
    <link rel="stylesheet" href="style.css">
-    <link rel= "https://cdn.pixabay.com/photo/2012/04/23/17/29/k-39336_640.png">
+    <link rel= "icon" href= "https://cdn.pixabay.com/photo/2012/04/23/17/29/k-39336_640.png">
     <title> Kash's site </title>
     </link>
   </head>
